--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,14 @@ venv/
 .DS_Store
 Thumbs.db
 
+dna2vec-legacy/Scripts/
+dna2vec-legacy/Lib/
+__pycache__/
+*.exe
+*.dll
+*.pyd
+*.pyc
+*.log
+.DS_Store
+
+
